--- a/src/app/Menu/Menu.module.css
+++ b/src/app/Menu/Menu.module.css
@@ -54,6 +54,7 @@ font-family: var(--work_sans);
 
 @media(max-width:760px){
   .menuSection{
-    padding: 1rem 2rem;
+    padding: 1rem 2rem 6rem;
+    
   }
 }
